# Uberton

./: .gitignore  CMakeLists.txt  README.md
cmake/: Properties.cmake
docs/: CNAME  index.html
src/: .clang-format
src/Plugins/: CMakeLists.txt
src/Plugins/BasicFx/: CMakeLists.txt
src/Plugins/BasicFx/resource/: Info.plist  editor.uidesc
src/Plugins/BasicFx/source/: controller.cpp  controller.h  factory.cpp  ids.h  processor.cpp  processor.h  version.h
src/Plugins/BasicInstrument/: CMakeLists.txt
src/Plugins/BasicInstrument/resource/: Info.plist  editor.uidesc
src/Plugins/BasicInstrument/source/: controller.cpp  controller.h  factory.cpp  ids.h  processor.cpp  processor.h  version.h
src/Plugins/Hypersphere/: CMakeLists.txt
src/Plugins/Hypersphere/resource/: Info.plist  editor.uidesc  plugin.rc
src/Plugins/Hypersphere/source/: controller.cpp  controller.h  factory.cpp  ids.h  processor.cpp  processor.h
src/Plugins/ManualGui/: CMakeLists.txt
src/Plugins/ManualGui/Factory_Presets/: p1.vstpreset  p2.vstpreset  p3.vstpreset
src/Plugins/ManualGui/resource/: Info.plist  editor.uidesc  plugin.rc
src/Plugins/ManualGui/source/: controller.cpp  controller.h  factory.cpp  gui.cpp  gui.h  ids.h  processor.cpp  processor.h  version.h
src/Plugins/Tesseract/: CMakeLists.txt
src/Plugins/Tesseract/Factory_Presets/: Electronic chimes undertones.vstpreset  Electronic chimes.vstpreset  Insane Maschine.vstpreset  Inside the 7D bottle.vstpreset  Light ringing.vstpreset  LoFi.vstpreset  Low pipes.vstpreset  The cave.vstpreset  Wind.vstpreset
src/Plugins/Tesseract/resource/: Info.plist  editor.uidesc  plugin.rc
src/Plugins/Tesseract/source/: controller.cpp  controller.h  factory.cpp  ids.h  processor.cpp  processor.h  version.h
src/Plugins/TesseractFx/: CMakeLists.txt
src/Plugins/TesseractFx/Factory_Presets/: Electronic chimes undertones.vstpreset  Electronic chimes.vstpreset  The cave.vstpreset
src/Plugins/TesseractFx/resource/: Info.plist  editor.uidesc  plugin.rc  resource.h
src/Plugins/TesseractFx/source/: controller.cpp  controller.h  factory.cpp  ids.h  processor.cpp  processor.h  processorImpl.h  version.h
src/Plugins/_dummydir_spatsynth/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/source/: ActionHistory.cpp  ActionHistory.h  ControllerBase.cpp  ControllerBase.h  ProcessorBase.cpp  ProcessorBase.h  adsr.h  cube_ewp_n=200.cpp  cube_ewp_n=200.h  cube_ewp_n=50.h  envelope.h  filter.h  lfo.h  oscillators.h  parameters.h  plugin_version.h.in  processor_utilities.cpp  processor_utilities.h  resonator.h  subcontrollers.cpp  subcontrollers.h  uberton.h  ui.cpp  ui.h  version_release.in  viewcreator.cpp  viewcreator.h  viewcreator_globals.h  vstmath.cpp  vstmath.h
src/installer/: CMakeLists.txt
src/installer/cmake/: CMakeRC.cmake  Installer.cmake
src/installer/source/: installer.cpp  installer.h  locations.cpp  locations.h  main - Kopie.cpp  main.cpp  plugin_defs.h.in  terms_and_conditions.h  wincontroller.cpp  wincontroller.h
src/installers_mac/: README.md
src/installers_mac/Tesseract/: tesseract_installer.pkgproj
src/installers_mac/Tesseract/resources/: INTRO.rtf  LICENSE.rtf  README.rtf
src/resonator_plugin_common/: CMakeLists.txt
src/resonator_plugin_common/source/: ResonatorController.cpp  ResonatorController.h  ResonatorProcessor.cpp  ResonatorProcessor.h  ResonatorProcessorImpl.h  ResonatorProcessorImplBase.h  common_param_specs.h
